Some minor fixes

--- a/react-native/rn-expo-shows-api/app.json
+++ b/react-native/rn-expo-shows-api/app.json
@@ -21,6 +21,8 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "",
+    "githubUrl": "https://github.com/maxandriani/igti-bootcamp-mobile"
   }
 }
